# StockMarket

./: .gitignore  CMakeLists.txt  Investor.cpp  Stock.cpp  StockMarket.cpp  main.cpp  readme.md
stonks/: Investor.h  StockMarket.cpp  main.cpp  stonks.vcxproj
stonks/header/: Stock.h  StockMarket.h
stonks/source/: Investor.cpp  Stock.cpp
stonks/x64/Debug/: vc142.idb
stonks/x64/Debug/stonks.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  stonks.lastbuildstate
